--- a/week2/day2/awesomeAnswers/newQuestion.haml
+++ b/week2/day2/awesomeAnswers/newQuestion.haml
@@ -33,6 +33,9 @@
                 .bodyForm
                     %h2 Body
                     %textarea{:type => "text", :name => "body", :class => "forms body"}
+                .submitForm
+                    %input{:type => "submit"}
                 
-                -# %h2.form-elms Title <input type="text" name="title" class="forms title">
-                -# %h2.form-elms Body <input type="text" name="body" class="forms body">
+        %footer
+            .about About
+            .contact Contact
