improve newQuestion.html

--- a/week2/day2/awesomeAnswers/newQuestion.haml
+++ b/week2/day2/awesomeAnswers/newQuestion.haml
@@ -33,8 +33,9 @@
                 .bodyForm
                     %h2 Body
                     %textarea{:type => "text", :name => "body", :class => "forms body"}
-                .submitForm
-                    %input{:type => "submit"}
+        
+            .submitForm
+                    %button Submit Question
                 
         %footer
             .about About
