--- a/week2/day2/awesomeAnswers/questions.haml
+++ b/week2/day2/awesomeAnswers/questions.haml
@@ -1,7 +1,7 @@
 %html
     %head
         %title Awesome Answers | Questions
-        %link{:rel => "stylesheet", :type => "text/css", :href => "styles/styles.css"}
+        %link{:rel => "stylesheet", :type => "text/css", :href => "styles/questions.css"}
 
 
     %body
