--- a/week2/day2/awesomeAnswers/styles/index.css
+++ b/week2/day2/awesomeAnswers/styles/index.css
@@ -1,4 +1,4 @@
-@import url("styles.css");
+@import url("base.css");
 
 .splash {
     width: 100%;
@@ -11,24 +11,9 @@
     font-size: 4em;
 }
 
-body {
-    background: var(--lightest);
-    display: flex;
-}
-
-h2 {
-    font-size: 1.5em;
-}
-
 .quote {
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-}
-
-footer {
-    display: flex;
-    justify-content: space-around;
-    align-self: flex-end;
 }
